[package]
name = "chiroptui"
version = "0.1.0"
authors = ["Nyeogmi <economicsbat@gmail.com>"]
description = "Swing-style UI tools, implemented on chiropterm"
readme = "README.md"
homepage = "https://github.com/nyeogmi/chiroptui"
repository = "https://github.com/nyeogmi/chiroptui"
license = "MIT OR Apache-2.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chiropterm = "0.2.0"
euclid = "0.22"
smallvec = "1.7.0"